# volt-core

./: .gitignore  ANNOUNCEMENT.md  Cargo.toml  Dockerfile  LINUX_GUIDE.md  README.md  ai_video_prompt.txt  binance_post_draft.txt  bitcointalk_ann.md  coinbase_listing_answers.txt  discord_welcome.txt  fix_service.sh  keygen.sh  miner.html  miningpoolstats_info.txt  nginx.conf  package_release_safe.ps1  pool_listing_request.txt  promo_video_script.txt  proxy.py  release_v1.0.22.ps1  run.sh  run_pool.ps1  test_rpc.js  update_remote.sh  volt_installer.sh  x_post_draft.txt
.github/workflows/: build.yml  deploy_release.yml  sync_to_hf.yml
genesis_tool/: Cargo.toml
genesis_tool/src/: main.rs
hf_deploy/: Dockerfile  README.md  README_HF.md  run.sh
manual_deploy/: Dockerfile  nginx.conf  run.sh
src/: api.rs  chain.rs  db.rs  stratum.rs
volt_core/: Cargo.toml
volt_core/src/: api.rs  block.rs  chain.rs  db.rs  evm_runner.rs  gui.rs  kademlia.rs  main.rs  node.rs  p2p.rs  script.rs  stratum.rs  transaction.rs  vm.rs  wallet.rs
volt_wallet/: build.rs
volt_wallet/src/: main.rs
web_deploy/: .env.example  Dockerfile  index.html  package-lock.json  package.json  vercel.json
web_deploy/api/: rpc.js
web_deploy/src/: App.css  App.jsx  config.js  index.css
web_deploy/src/components/: AddressBook.jsx  Chart.jsx  Layout.jsx
web_deploy/src/pages/: AddressDetail.jsx  Assets.jsx  BlockDetail.jsx  Contracts.jsx  Explorer.jsx  Guide.jsx  Home.jsx  Nft.jsx  Pool.jsx  Status.jsx  Swap.jsx  TxDetail.jsx  Wallet.jsx  Whitepaper.jsx
web_deploy/src/utils/: apiConfig.js
