[package]
name = "volt_core"
version = "1.0.23"
edition = "2021"



[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasmer = "4.2" # Smart Contract Runtime
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
log = "0.4"
env_logger = "0.10"

# Cryptography
k256 = { version = "0.13", features = ["ecdsa", "serde"] }
rand_core = { version = "0.6", features = ["std"] }
aes-gcm = "0.10"
pbkdf2 = "0.11"
ripemd = "0.1" # Added for P2PKH Hashing
hmac = "0.12"
rand = "0.8"
signature = "2.0"
bip39 = "2.0"
sled = "0.34"

# Networking
igd = "0.12"
tungstenite = { version = "0.20", features = ["native-tls"] }
url = "2.4" 

# EVM Support
revm = { version = "2.5", features = ["std", "secp256k1"] }
bytes = "1.4"
hex-literal = "0.4"
primitive-types = "0.12"
# GUI (Disabled)
# eframe = "0.27.0"
# egui = "0.27.0"
# winapi = { version = "0.3", features = ["winuser"] }
